# AIVoiceNote

./: .env.example  .gitignore  .prettierrc  DEVELOPMENT.md  README.md  architecture.md  deploy.sh  docker-compose.yml  eslint.config.js  package-lock.json  package.json  requirements.md  run_local.ps1  run_local.sh  tsconfig.json  turbo.json
backend/: Dockerfile  auth_utils.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  schemas.py  test_auth.py
backend/alembic/: env.py
backend/alembic/versions/: 23cf72707bdb_add_knowledge_engine.py  2a3b4c5d6e7f_optimize_for_production.py  3106bf90bbd6_add_meeting_minutes.py  3ceeb5d03c44_add_note_embeddings.py  3dbc66a7d8a2_add_scheduled_emails.py  80c8c00a92c4_add_provider_to_emails.py  a1cc5570f74e_add_deleted_records.py  b2d4e6f8a1c3_migrate_to_structured_summaries.py  c0acaee2c1b5_initial_migration.py  e279df183edb_add_note_enhancements.py
backend/app/: database.py
backend/app/api/: deps.py
backend/app/core/: config.py  exceptions.py  logging.py  metrics.py  r2.py  security.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py  storage.py  sync.py
backend/app/services/: __init__.py  document_parser.py  email_service.py  (+12 more)
backend/tests/: conftest.py  test_api.py  test_email_service.py  test_enhancement_service.py  test_knowledge_service.py  test_minutes_service.py  test_search_service.py  test_storage.py  test_summary_service.py  test_sync.py
backend/uploads/: 7d817ead-74d1-46b8-b33a-52c1e29d5ad6.m4a
backend/voicemind_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+42 files in other folders)
